--- a/.gitignore
+++ b/.gitignore
@@ -187,3 +187,5 @@ FakesAssemblies/
 GeneratedArtifacts/
 _Pvt_Extensions/
 ModelManifest.xml
+.vs/DbComm2Excel/v16/Server/sqlite3/db.lock
+.vs/DbComm2Excel/v16/Server/sqlite3/storage.ide
