--- a/.gitignore
+++ b/.gitignore
@@ -189,3 +189,4 @@ _Pvt_Extensions/
 ModelManifest.xml
 .vs/DbComm2Excel/v16/Server/sqlite3/db.lock
 .vs/DbComm2Excel/v16/Server/sqlite3/storage.ide
+/DbComm2Excel/Lib
