--- a/.gitignore
+++ b/.gitignore
@@ -190,3 +190,4 @@ ModelManifest.xml
 .vs/DbComm2Excel/v16/Server/sqlite3/db.lock
 .vs/DbComm2Excel/v16/Server/sqlite3/storage.ide
 /DbComm2Excel/Lib
+/DbComm2Excel/ReadIni
