--- a/DbComm2Excel/DbComm2Excel.vbproj
+++ b/DbComm2Excel/DbComm2Excel.vbproj
@@ -136,6 +136,12 @@
     <Compile Include="Form3.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="PM1.0.Designer.vb">
+      <DependentUpon>PM1.0.vb</DependentUpon>
+    </Compile>
+    <Compile Include="PM1.0.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
@@ -167,6 +173,9 @@
       <LastGenOutput>Resources.Designer.vb</LastGenOutput>
       <CustomToolNamespace>My.Resources</CustomToolNamespace>
       <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="PM1.0.resx">
+      <DependentUpon>PM1.0.vb</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
